# Snake

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: arguments.hh  ascii_view.hh  bots.hh  colors.hh  controller.hh  game_coordinates.hh  game_settings.hh  graphics_view.hh  logging.hh  model.hh  rabbits.hh  simulation.hh  utils.hh  view.hh
scripts/: simulation.py
sources/: arguments.cc  ascii_view.cc  bots.cc  controller.cc  dumb_bot.cc  graphics_view.cc  main.cc  model.cc  simulation.cc  view.cc
